# zk-casino-server

./: README.md
aleo/: Cargo.toml
casino-server/: Cargo.toml  nohup.out
casino-server/src/: casino.rs  main.rs  utils.rs
