[package]
name = "casino-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aleo-rust = { path = "../aleo/rust"}
rand = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
ureq = "2"
snarkvm = { git = "https://github.com/AleoHQ/snarkVM", rev = "67f8829" }
clap = { version = "3.1", features = ["derive"] }

